compiler/test/parse-err/ewise-func-non-scalar-params.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{first parameter has type Matrix<s, s, int>}}
// expected-note@below{{second parameter has type int}}
func matrixParam(m: Matrix<s, s, int>, n: int) -> int {
    return n;
}

func EwiseFuncNonScalarParams(m: Matrix<s, s, int>, n: Matrix<s, s, int>) -> Matrix<s, s, int> {
    // expected-error@below{{element-wise function application requires function parameters to be scalars}}
    return m (.matrixParam) n;
}
